// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders correct analytics metadata on the trigger button 1`] = `
{
  "action": "expand",
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
  "detail": {
    "label": "select with metadata",
  },
}
`;

exports[`Select renders correct analytics metadata on the trigger button 2`] = `
{
  "action": "collapse",
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
  "detail": {
    "label": "select with metadata",
  },
}
`;

exports[`Select renders correct analytics metadata when disabled 1`] = `
{
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "true",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
}
`;

exports[`Select renders correct analytics metadata when readonly 1`] = `
{
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
}
`;

exports[`Select renders correct analytics metadata with groups and expandToViewport=false 1`] = `
{
  "action": "select",
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
  "detail": {
    "groupLabel": "group1",
    "label": "value1repeated",
    "position": "1,2",
    "value": "value1repeated",
  },
}
`;

exports[`Select renders correct analytics metadata with groups and expandToViewport=false 2`] = `
{
  "action": "select",
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
  "detail": {
    "groupLabel": "group3",
    "label": "label3",
    "position": "3,1",
    "value": "value3",
  },
}
`;

exports[`Select renders correct analytics metadata with groups and expandToViewport=false 3`] = `
{
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
}
`;

exports[`Select renders correct analytics metadata with groups and expandToViewport=false 4`] = `
{
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
}
`;

exports[`Select renders correct analytics metadata with groups and expandToViewport=true 1`] = `
{
  "action": "select",
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
  "detail": {
    "groupLabel": "group1",
    "label": "value1repeated",
    "position": "1,2",
    "value": "value1repeated",
  },
}
`;

exports[`Select renders correct analytics metadata with groups and expandToViewport=true 2`] = `
{
  "action": "select",
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
  "detail": {
    "groupLabel": "group3",
    "label": "label3",
    "position": "3,1",
    "value": "value3",
  },
}
`;

exports[`Select renders correct analytics metadata with groups and expandToViewport=true 3`] = `
{
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
}
`;

exports[`Select renders correct analytics metadata with groups and expandToViewport=true 4`] = `
{
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
}
`;

exports[`Select renders correct analytics metadata with selectedOption and defined value 1`] = `
{
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "value1",
          "selectedOptionValue": "value1",
        },
      },
      "type": "component",
    },
  ],
}
`;

exports[`Select renders correct analytics metadata with selectedOption and undefined value 1`] = `
{
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "label1",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
}
`;

exports[`Select renders correct analytics metadata with simple items 1`] = `
{
  "action": "select",
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
  "detail": {
    "label": "value1",
    "position": "1",
    "value": "value1",
  },
}
`;

exports[`Select renders correct analytics metadata with simple items 2`] = `
{
  "action": "select",
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
  "detail": {
    "label": "label2",
    "position": "2",
    "value": "value2",
  },
}
`;

exports[`Select renders correct analytics metadata with simple items 3`] = `
{
  "contexts": [
    {
      "detail": {
        "label": "select with metadata",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
  ],
}
`;

exports[`Select renders correct analytics metadata within a formfield 1`] = `
{
  "contexts": [
    {
      "detail": {
        "label": "formfield label",
        "name": "awsui.Select",
        "properties": {
          "disabled": "false",
          "selectedOption": "null",
          "selectedOptionValue": "null",
        },
      },
      "type": "component",
    },
    {
      "detail": {
        "label": "formfield label",
        "name": "awsui.FormField",
      },
      "type": "component",
    },
  ],
}
`;
